SPOR-4: Setup Firebase database

--- a/flutter/sportify_app/android/local.properties
+++ b/flutter/sportify_app/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/jagdevsinghjhajj/Library/Android/sdk
-flutter.sdk=/Users/jagdevsinghjhajj/Flutterdev/flutter
+sdk.dir=/Users/bhavikkothari/Library/Android/sdk
+flutter.sdk=/Users/bhavikkothari/Developement/flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
