--- a/flutter/sportify_app/pubspec.yaml
+++ b/flutter/sportify_app/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   datetime_picker_formfield: ^1.0.0
   intl: ^0.16.1
+  http:
+  dio:
 
 
   # The following adds the Cupertino Icons font to your application.
