--- a/flutter/sportify_app/pubspec.yaml
+++ b/flutter/sportify_app/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   intl: ^0.16.1
   http:
   dio:
+  uuid:
+  google_places_flutter:
+  google_maps_flutter: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
