--- a/flutter/sportify_app/pubspec.yaml
+++ b/flutter/sportify_app/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   http:
   dio:
   uuid:
-  shared_preferences: ^0.5.12+4
+  shared_preferences: ^0.5.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
