--- a/flutter/sportify_app/pubspec.yaml
+++ b/flutter/sportify_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dio:
   uuid:
   shared_preferences: ^0.5.12
+  pull_to_refresh: ^1.6.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +38,8 @@ dependencies:
   firebase_core: ^0.5.1
   firebase_auth: ^0.18.3+1
   firebase_dynamic_links: ^0.6.2
+
+
 
 dev_dependencies:
   flutter_test:
